# champagnefestival

./: .dockerignore  .env.development  .env.example  .env.production  .eslintrc.json  .gitignore  .nowignore  .oxlintrc.json  AGENTS.md  App.tsx  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  DEPLOYMENT.md  MIGRATION-PLAN.md  OPTIMIZATION-PLAN.md  REACT-MIGRATION.md  README.md  RELEASE-RUNBOOK.md  TODO.md  docker-compose.combined.yml  docker-compose.yml  eslint.config.mjs  get-dictionary.ts  index.css  index.html  middleware.ts  navigation.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.toml
.cloudflare/: pages.json
.github/: dependabot.yml  settings.yml
android/: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
app/: app.css  barebone.tsx  debug-page.tsx  error.tsx  globals.css  i18n.ts  layout.tsx  middleware.ts  minimal-test.tsx  not-found.tsx  page.tsx  providers.tsx  root.tsx
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_supertokens_user_id.py  002_add_volunteer_periods.py  002_add_volunteer_periods_and_access_tokens.py  002_content_items.py  002_multi_role.py  002_producers_sponsors.py  002_reservation_access_tokens.py  002_unified_events.py  003_migrate_to_oidc.py  003_partial_delivery_quantity.py  003_rooms.py  003_unified_events.py  004_audit_entries.py  004_drop_oidc_subject.py  004_editions.py  005_operational_search.py  005_people_regular_visitors_volunteers.py  005_people_volunteers_and_reservation_link.py  006_table_rotation_float_to_int.py  007_table_height_m_to_length_m.py
backend/app/: __init__.py  audit.py  auth.py  config.py  database.py  dependencies.py  email.py  main.py  mcp_server.py  middleware.py  models.py  observability.py  oidc_config.py  operational_search_schema.py  ratelimit.py  schemas.py  spam.py  supertokens_config.py  utils.py  version.py
backend/app/live/: __init__.py  bus.py  events.py  mapping.py
backend/app/mcp/: check_in.py  delivery.py  orders.py  public.py  seating.py  utils.py
backend/app/routers/: areas.py  audit.py  auth.py  champagne_lovers.py  check_in.py  club_members.py  contact.py  content.py  editions.py  events.py  exhibitors.py  health.py  layouts.py  live.py  me.py  members.py  people.py  producers.py  registrations.py  regular_visitors.py  reservations.py  rooms.py  sponsors.py  table_types.py  tables.py  venue_plan.py  venues.py  volunteer_ops.py  volunteers.py
backend/app/services/: __init__.py  operational_search.py
backend/docs/: OBSERVABILITY.md
backend/tests/: conftest.py  helpers.py  test_api.py  test_areas.py  test_audit.py  test_audit_endpoint.py  test_auth.py  test_check_in.py  test_contact.py  test_cors_middleware.py  test_editions.py  test_events.py  test_exhibitors.py  test_general_rate_limit.py  test_health.py  test_layouts.py  test_live_broadcasts.py  test_live_bus.py  test_live_endpoint.py  test_live_mapping.py  test_mcp_server.py  test_me.py  test_oidc_config.py  test_operational_people_search.py  test_operational_search.py  test_order_delivery_model.py  test_people.py  test_ratelimit.py  test_registrations_admin.py  test_registrations_export.py  test_registrations_public.py  test_request_correlation.py  test_rooms.py  test_supertokens_config.py  test_table_types.py  test_tables.py  test_utils.py  test_venue_plan.py  test_venues.py  test_visitor_lookup.py  (+3 more)
components/: Bubble.tsx  BubbleBackground.tsx  FAQ.tsx  Header.tsx  LanguageSwitcher.tsx  MapComponent.tsx
dictionaries/: en.json  fr.json  nl.json
frontend/: .env.development  .env.production  .oxfmtrc.json  .oxlintrc.json  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
functions/: contact.js
infra/: champagnefestival.env.example
lib/: data.ts  i18n.ts
messages/: en.json  fr.json  nl.json
pebble/: .gitignore  README.md  package.json
public/: _headers  robots.txt  (+6 more)
(+509 files in other folders)
