[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "champagnefestival-backend"
version = "0.1.0"
description = "FastAPI backend for the Champagne Festival reservation system"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.18.5",
  "asyncpg==0.31.0",
  "fastapi==0.137.2",
  "fastmcp==3.4.2",
  "httpx==0.28.1",
  "phonenumbers==9.0.32",
  "psycopg[binary]==3.3.4",
  "pydantic[email]==2.13.4",
  "pydantic-settings==2.14.2",
  "PyJWT[crypto]==2.12.1",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.32",
  "sqlalchemy==2.0.51",
  "uvicorn[standard]==0.49.0",
]

[project.optional-dependencies]
sentry = ["sentry-sdk[fastapi]==2.63.0"]

[dependency-groups]
dev = ["pytest==9.1.1", "pytest-asyncio==1.4.0", "anyio==4.14.0", "ruff==0.15.18", "ty==0.0.51"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-p no:anyio"
markers = ["anyio: marks tests as anyio-compatible (no-op under asyncio_mode=auto)"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty.rules]
unresolved-attribute = "warn"
